deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vproapp
    labels:
        app: vproapp
spec:
    replicas: 1
    selector:
        matchLabels:
            app: vproapp
    template:
        metadata:
            labels:
              app: vproapp
        spec:
             containers:
              - name: webapp
                image: jabirmahammad/vprofileapp:V1
                ports:
                  - containerPort: 8080
