service.yml
apiVersion: v1
kind: Service
metadata:
      name: web-service
spec:
      type: ClusterIP
      selector:
           app: vproapp
      ports:
           - targetPort: 8080
             port: 8080
             protocol: TCP
