ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regexp: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.mahammadjabirsi.in
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 8080
